--- a/style.css
+++ b/style.css
@@ -22,3 +22,9 @@ h1,h2{
   margin-left: 30px;
   font-family: "Consolas", Sans-Serif;
 }
+
+img{
+    margin-left: 70%;
+    height: 100px;
+    border-radius: 10px;
+}
